Commit 2: Home page Finished -Missing details and responsiveness in login and home. - Missing other screens. - Missing correct data in second chart.
Issues: No issues detected.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,8 @@
 :root {
     --navyBlue: #163175;
     --deepBlue: #394A75;
-    --oceanBlue: #5A74B7;
+    --oceanBlue: #2047A8;
+    --midBlue: #5A74B7;
     --lightBlue: #789BF5;
     --gray: #EAEAEA;
     --yellow: #C9A03A;
