--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -9,6 +9,7 @@
 }
 .header__container > img {
     height: 70px;
+    cursor: pointer;
 }
 .profileIcon__container {
     width: 55px;
@@ -20,6 +21,7 @@
     justify-content: center;
     overflow: hidden;
     margin: 0;
+    cursor: pointer;
 }
 .profileIcon__container > svg {
     fill: var(--lightBlue);
@@ -58,75 +60,25 @@
     justify-content: center;
 }
 
-/* ------------ MenuCard ----------- */
-.menuCard {
-    width: 250px;
-    height: 250px;
-    background: var(--midBlue);
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.menuCard > img {
-    height: 100px;
-    margin: 0;
-}
-.menuCard > h3 {
-    margin: 0;
-    color: white;
-    font-size: 20px
-}
-/* ------------ Home Container ----------- */
-.homePage__container {
-    background: var(--gray);
-    width: 100%;
-    height: 95vh;
-    padding: 40px 60px;
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 520px 610px;
-    align-items: center;
-    justify-content: center;
-    grid-column-gap: 60px;
-}
-.menuCard__container {
-    margin: 0 auto;
-    width: 520px;
-    grid-gap: 10px;
-    display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr;
-    align-content: center;
-    justify-content: center;
-}
-.menuCard__container > div {
-    margin: 0 auto;
-}
-.charts__container {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr;
-    grid-column-gap: 0;
-    grid-row-gap: 10px;
-    align-items: center;
-    justify-content: center;
-}
-@media (max-width: 1200px) {
-    .homePage__container {
-        height: auto;
-        grid-template-columns: 100%;
-        grid-template-rows: 1fr 1fr;
-        grid-row-gap: 0;
-        align-items: center;
-        justify-content: center;
-        grid-template-areas: "b" "a";
+
+@media (max-width: 700px) {
+    .header__container {
+        height: 60px;
     }
-    .charts__container {
-        grid-area: b;
+    .header__container > img {
+        height: 40px;
     }
-    .menuCard__container {
-        grid-area: a;
-        width: 80%;
+    .profileIcon__container {
+        width: 40px;
+        height: 40px;
+    }
+    .footer__container {
+        height: 80px;
+    }
+    .footer__container > p, .footer__container > p > span {
+        font-size: 15px;
+    }
+    .footer__container > img {
+        height: 40px;
     }
 }
