--- a/src/styles/assetStyles.module.css
+++ b/src/styles/assetStyles.module.css
@@ -1,3 +1,5 @@
+/*-----------------------ASSET PAGE & COMPONENTS STYLES--------------------*/
+/*-----------------------MAIN CONTAINER-----------------------------*/
 .assetPage__container {
     width: 100%;
     min-height: 95vh;
@@ -12,6 +14,7 @@
     color: var(--midBlue);
     font-size: 40px;
 }
+/*-----------------------ASSET IMAGE-----------------------------*/
 .assetIcon {
     height: 150px;
     width: 150px;
@@ -23,9 +26,10 @@
     justify-content: center;
 }
 .assetIcon > img {
-    width: 100%;
+    width: 150%;
     margin: 0 auto;
 }
+/*-----------------------ASSET INFORMATION CONTAINER-----------------------------*/
 .assetInfo__container {
     background: white;
     width: 600px;
@@ -47,6 +51,7 @@
     font-size: 16px;
     margin: 8px 0;
 }
+/*-----------------------SENSOR ELEMENT-----------------------------*/
 .sensor {
     margin: 10px 0 0 0;
     width: 100px;
@@ -61,6 +66,7 @@
     color: white;
     font-size: 16px;
 }
+/*-----------------------TABLET & SMALLER----------------------------*/
 @media(max-width: 700px) {
     .assetPage__container > h1 {
         font-size: 30px;
@@ -76,5 +82,11 @@
         color: var(--oceanBlue);
         font-size: 13px;
         margin: 5px 0;
+    }
+}
+@media(max-width: 500px) {
+    .assetIcon {
+        width: 100px;
+        height: 100px;
     }
 }
