--- a/src/styles/spinner.module.css
+++ b/src/styles/spinner.module.css
@@ -1,3 +1,5 @@
+/*------------------SPINNER COMPONENT STYLES----------------------*/
+/*-----------------------SPINNER MAIN CONTAINER--------------------*/
 .spinner {
     width: 40px;
     height: 40px;
@@ -5,7 +7,7 @@
     position: relative;
     margin: 100px auto;
   }
-  
+  /*-----------------------SPINNER ANIMATIONS--------------------*/
   .doubleBounce1, .doubleBounce2 {
     width: 100%;
     height: 100%;
@@ -19,17 +21,15 @@
     -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
     animation: sk-bounce 2.0s infinite ease-in-out;
   }
-  
   .doubleBounce2 {
     -webkit-animation-delay: -1.0s;
     animation-delay: -1.0s;
   }
-  
+  /*-----------------------ANIMATION KEYFRAMES--------------------*/
   @-webkit-keyframes sk-bounce {
     0%, 100% { -webkit-transform: scale(0.0) }
     50% { -webkit-transform: scale(1.0) }
   }
-  
   @keyframes sk-bounce {
     0%, 100% { 
       transform: scale(0.0);
